--- a/TimeSheetApp/EditForm.xaml
+++ b/TimeSheetApp/EditForm.xaml
@@ -51,19 +51,43 @@
                 <RowDefinition Height="6*"/>
             </Grid.RowDefinitions>
             <Label Margin="5,0,0,0" Content="Процесс:" Grid.Row="0"/>
-            <Label Foreground="DarkGray" Margin="5,0,0,0" Content="Бизнес подразделение:" Grid.Row="2"/>
-            <Label Foreground="DarkGray" Margin="5,0,0,0" Content="Support:" Grid.Row="4"/>
+            <Label Margin="5,0,0,0" Content="Бизнес подразделение:" Grid.Row="2"/>
+            <Label Margin="5,0,0,0" Content="Support:" Grid.Row="4"/>
             <Label Margin="5,0,0,0" Content="Клиентские пути:" Grid.Row="6"/>
-            <Label Foreground="DarkGray" Margin="5,0,0,0" Content="Эскалация:" Grid.Row="8"/>
+            <Label Margin="5,0,0,0" Content="Эскалация:" Grid.Row="8"/>
             <Label Margin="5,0,0,0" Content="Формат:" Grid.Row="10"/>
-            <Label Foreground="DarkGray" Margin="5,0,0,0" Content="Риск:" Grid.Row="12"/>
+            <Label Margin="5,0,0,0" Content="Риск:" Grid.Row="12"/>
             <ComboBox Name="ProcessList" Grid.Row="1" ItemsSource="{Binding Processes}" DisplayMemberPath="procName" SelectedItem="{Binding EditedRecord.Process}"/>
-            <ComboBox IsEnabled="False" Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" DisplayMemberPath="BusinessBlockName" SelectedItem="{Binding EditedRecord.BusinessBlock}"/>
-            <ComboBox IsEnabled="False" Name="supportList" Grid.Row="5" ItemsSource="{Binding SupportsArr}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Supports}"/>
+            <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" DisplayMemberPath="BusinessBlockName" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="ItemSelectionChanged">
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=BusinessList, Path=SelectedItems}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </xctk:CheckComboBox>
+            <xctk:CheckComboBox Name="supportList" Grid.Row="5" ItemsSource="{Binding SupportsArr}" DisplayMemberPath="Name" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="ItemSelectionChanged">
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=supportList, Path=SelectedItems}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </xctk:CheckComboBox>
             <ComboBox Name="ClientWaysList" Grid.Row="7" ItemsSource="{Binding ClientWays}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.ClientWays}"/>
-            <ComboBox IsEnabled="False" Name="EscalationList" Grid.Row="9" ItemsSource="{Binding Escalations}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Escalations}"/>
+            <xctk:CheckComboBox Name="EscalationList" Grid.Row="9" ItemsSource="{Binding Escalations}" DisplayMemberPath="Name" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="ItemSelectionChanged">
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=EscalationList, Path=SelectedItems}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </xctk:CheckComboBox>
             <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding FormatList}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
-            <ComboBox IsEnabled="False" Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="riskName" />
+            <ComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="riskName" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="ItemSelectionChanged">
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=RiskList, Path=SelectedItems}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <StackPanel Orientation="Vertical" Grid.Row="14" VerticalAlignment="Center">
                 <DatePicker Name="EditDatePicker" Width="150" SelectedDateChanged="EditDatePicker_SelectedDateChanged" Margin="0,10,0,10"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -83,7 +107,7 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </xctk:TimePicker>
-                    
+
                 </StackPanel>
                 <TextBlock Text="Указанное время пересекается с другой записью" Visibility="{Binding IsTimeCorrect, Converter={StaticResource InvertBoolean}}" HorizontalAlignment="Center" Foreground="red"/>
                 <TextBlock Text="или введено неверно" Visibility="{Binding IsTimeCorrect, Converter={StaticResource InvertBoolean}}" HorizontalAlignment="Center" Foreground="red"/>
