--- a/TimeSheetApp/EditForm.xaml
+++ b/TimeSheetApp/EditForm.xaml
@@ -58,36 +58,41 @@
             <Label Margin="5,0,0,0" Content="Формат:" Grid.Row="10"/>
             <Label Margin="5,0,0,0" Content="Риск:" Grid.Row="12"/>
             <ComboBox Name="ProcessList" Grid.Row="1" ItemsSource="{Binding Processes}" DisplayMemberPath="procName" SelectedItem="{Binding EditedRecord.Process}"/>
-            <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" DisplayMemberPath="BusinessBlockName" >
+            <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" 
+                                DisplayMemberPath="BusinessBlockName" 
+                                SelectedItemsOverride="{Binding BusinessBlockChoiceCollection}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=BusinessList, Path=SelectedItems}"/>
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </xctk:CheckComboBox>
-            <xctk:CheckComboBox Name="supportList" Grid.Row="5" ItemsSource="{Binding SupportsArr}" DisplayMemberPath="Name" >
+            <xctk:CheckComboBox Name="supportList" Grid.Row="5" 
+                                ItemsSource="{Binding SupportsArr}" 
+                                DisplayMemberPath="Name" 
+                                SelectedItemsOverride="{Binding SupportsChoiceCollection}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=supportList, Path=SelectedItems}"/>
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </xctk:CheckComboBox>
             <ComboBox Name="ClientWaysList" Grid.Row="7" ItemsSource="{Binding ClientWays}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.ClientWays}"/>
-            <xctk:CheckComboBox Name="EscalationList" Grid.Row="9" ItemsSource="{Binding Escalations}" DisplayMemberPath="Name" >
+            <xctk:CheckComboBox Name="EscalationList" Grid.Row="9" ItemsSource="{Binding Escalations}" DisplayMemberPath="Name" SelectedItemsOverride="{Binding EscalationsChoiceCollection}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=EscalationList, Path=SelectedItems}"/>
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </xctk:CheckComboBox>
             <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding FormatList}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
-            <ComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="riskName" >
+            <xctk:CheckComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="riskName"  SelectedItemsOverride="{Binding RiskChoiceCollection}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding ElementName=RiskList, Path=SelectedItems}"/>
+                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
-            </ComboBox>
+            </xctk:CheckComboBox>
             <StackPanel Orientation="Vertical" Grid.Row="14" VerticalAlignment="Center">
                 <DatePicker Name="EditDatePicker" Width="150" SelectedDateChanged="EditDatePicker_SelectedDateChanged" Margin="0,10,0,10"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
